[#263] more Unit Tests